# fwsec

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
etc/fwsec/: fwsec.allow  fwsec.conf  fwsec.deny  fwsec.ignore
src/fwsec/: __init__.py  __main__.py  cli.py  config.py  containers.py  crowdsec.py  hypervisor.py  nft.py  rules.py  state.py  upgrade.py
