[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fwsec"
version = "1.1.0"
description = "nftables + CrowdSec firewall manager — CSF-style CLI"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/hdbrsaulobrito/fwsec"
Repository = "https://github.com/hdbrsaulobrito/fwsec.git"
Issues = "https://github.com/hdbrsaulobrito/fwsec/issues"
Security = "https://github.com/hdbrsaulobrito/fwsec/security/policy"

[project.scripts]
fwsec = "fwsec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fwsec"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
